layout: fix spacing without post time in footer

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -281,9 +281,15 @@ a:visited {
     .post .post-footer {
       color: #999;
       margin-left: 7em;
-      
+
       letter-spacing:0;
       text-align: right;
+    }
+
+    .post .post-footer:after {
+      clear: both;
+      content: "";
+      display: table;
     }
     
     .post .post-footer .when {
@@ -315,6 +321,7 @@ a:visited {
         margin:0;
         float:left;
     }
+
     .post .tags li, .post .attribution li, .post .syndication li {
         float:left;
         list-style:none;
